Bug 457838 - Activation Gestures is missing
Summary: Activation Gestures is missing
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_accessibility (other bugs)
Version First Reported In: 5.25.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gunnar Schmidt
URL:
Keywords: accessibility, regression
Depends on:
Blocks:
 
Reported: 2022-08-13 12:54 UTC by cprog
Modified: 2024-08-13 19:30 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cprog 2022-08-13 12:54:31 UTC
SUMMARY
***
Activation Gestures settings tab is missing in Accessibility configuration module.
According to the documentation, it should be placed after Keyboard Filters.
Here is the relevant documentation - https://docs.kde.org/stable5/en/plasma-desktop/kcontrol/kcmaccess/index.html
***


STEPS TO REPRODUCE
1. Open System Settings
2.  Search for Accessibility
3. Click on Accessibility

OBSERVED RESULT
You should be able to find Activation gestures under Keyboard Filters on the right. 

EXPECTED RESULT
Activation gestures is missing. 

SOFTWARE/OS VERSIONS
Linux: Arch Linux
KDE Plasma Version: 5.25.4 
KDE Frameworks Version: 5.96.0
Qt Version:  5.15.5

ADDITIONAL INFORMATION
Comment 1 Nick Stefanov 2022-08-13 14:12:58 UTC
Same here, there's no Activation Gestures settings tab in Accessibility section.
Comment 2 Bug Janitor Service 2024-05-14 14:17:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2247
Comment 3 Nicolas Fella 2024-05-23 07:01:44 UTC
Git commit 6e33827c9aca12b8a3d8233853d08a3cf79cb255 by Nicolas Fella.
Committed on 23/05/2024 at 07:01.
Pushed by nicolasfella into branch 'master'.

[kcms/access] Restore Activation Gestures tab

This got merged into other tabs in c275bf35f3b6eec34ae935e8df68ec68ad89c373 and
then partly dropped in e80ef5da8f309a94ff483d747b708f9904759e2f based on a wrong
assumption.

Restore the tab as it was before the QML rewrite

M  +10   -10   kaccess/kaccess.cpp
M  +2    -0    kaccess/kaccess.h
M  +3    -2    kcms/access/CMakeLists.txt
M  +13   -0    kcms/access/kcmaccess.cpp
M  +6    -0    kcms/access/kcmaccess.h
C  +7    -19   kcms/access/kcmaccessibilityactivationgestures.kcfg [from: kcms/access/kcmaccessibilitykeyboard.kcfg - 052% similarity]
A  +6    -0    kcms/access/kcmaccessibilityactivationgestures.kcfgc
M  +0    -12   kcms/access/kcmaccessibilitykeyboard.kcfg
M  +0    -14   kcms/access/kcmaccessibilitymouse.kcfg
A  +109  -0    kcms/access/ui/ActivationGestures.qml     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
M  +0    -38   kcms/access/ui/MouseNavigation.qml
M  +9    -0    kcms/access/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/6e33827c9aca12b8a3d8233853d08a3cf79cb255
Comment 4 keybounce 2024-08-12 20:48:30 UTC
This panel is *still missing* for me on LTS 22.4.

How do I manually force these things off -- I need to hold down shift either for games, or for tools that want to say "modify how the mouse is interpreted as you hold this".
Comment 5 Nate Graham 2024-08-12 20:56:19 UTC
Right, because you're not using Plasma 6.1, the version in the "Version fixed in" field. Instead you're still stuck on Plasma 5.27, which is what the Ubuntu LTS release has.

If you find yourself missing stuff that's fixed or implemented in newer Plasma versions than what LTS Ubuntu releases provide, it might be wise to rethink sticking with LTS releases.
Comment 6 keybounce 2024-08-12 21:01:07 UTC
Perhaps I misunderstood what "LTS" means? 

Long Term Support/Stability, as in, bugs will be fixed, but the system will be stable and not changing every two weeks at random. I won't have to keep retraining how I do things every month. About once a year or so, I can expect to update and learn a new set of behaviors, once. Not every couple of weeks/month.

Did I misunderstand this? Does LTS include bug fixes?
Comment 7 Nate Graham 2024-08-12 22:41:36 UTC
I'm afraid you have misunderstood, yes. It's a very common mistake. Allow me to explain:

"LTS" is a designation made by the distro that means "Long term support". It absolutely does *not* mean "all bugs will be fixed"; that's impossible. What means is that the distro will intentionally delay shipping newer software on the theory that newer software is buggier than old software, in order to give the newer software a chance to mature a bit. Then, the distro also says that for a specified period of time (IIRC 5 years for Ubuntu) they will make an effort to backport fixes for bugs and security issues where feasible, so that your old software which does not gain new features will at least get bug fixes and remain secure.

The rub is that sometimes bugs get fixed in the form of new features being developed, so if your distro is intentionally holding back new features, you won't get any of that.

Additionally, IMO the Ubuntu LTS basically doesn't mean anything when it comes to KDE software, because Ubuntu's paid engineers don't typically do much if any of this backporting for the KDE software stack — only for the GNOME software stack. So IMO you are getting the worst of both worlds: no new features and also few if any bug fixes to the KDE software. You'd be better off using non-LTS Ubuntu releases, or another distro that ships software closer to developers' release schedules. I'm quite fond of Fedora KDE nowadays.
Comment 8 keybounce 2024-08-13 03:20:03 UTC
(In reply to Nate Graham from comment #7)
> So IMO you are getting the worst of both worlds: no
> new features and also few if any bug fixes to the KDE software. You'd be
> better off using non-LTS Ubuntu releases, or another distro that ships
> software closer to developers' release schedules. I'm quite fond of Fedora
> KDE nowadays.

OK, then what's the best way to update to a newer version of plasma and KDE? I spent a few hours looking around today, and basically came away with:

1, Neon is plasma direct from the devs, but lacks stability -- it's apparently better to go with another system for  fewer updates with less complications
2, Tuxedo seems to be recommended, but that wants to do a fully automatic install that wipes the computer. Not an upgrade, a 'maintain your data', or even "install on a second SSD".
3, As for upgrading to 24, I was advised to wait for the next release later this week
4, and i've had some people point to PPA sources, and other say that these PPA's are not stable (updates too frequently, like Neon).
Comment 9 Nate Graham 2024-08-13 19:30:17 UTC
Probably the easiest option for you pesonally is to just use Kubuntu's non-LTS versions. You still have to wait 6 months for new features and most bug fixes, but that's better than two years! Kubuntu 24.10 should be out in October and that'll include Plasma 6.1

If even that seems like too long, then you might appreciate a discrete release distro that ships new features and bug fixes on a rolling basis anyway, like Fedora KDE. Or even a pure rolling release distro like openSUSE Tumbleweed or Arch.