[kcms/access] Restore Activation Gestures tab

This got merged into other tabs in c275bf35f3b6eec34ae935e8df68ec68ad89c373 and
then partly dropped in e80ef5da8f309a94ff483d747b708f9904759e2f based on a wrong
assumption.

Restore the tab as it was before the QML rewrite

BUG: 457838