kcms/access/kcmaccess.cpp
@@ -33,6 +33,7 @@
 #define XK_XKB_KEYS
 #include <X11/keysymdef.h>
 
+#include "kcmaccessibilityactivationgestures.h"
 #include "kcmaccessibilitybell.h"
 #include "kcmaccessibilitydata.h"
 #include "kcmaccessibilitykeyboard.h"
@@ -145,6 +146,7 @@ KAccessConfig::KAccessConfig(QObject *parent, const KPluginMetaData &metaData)
     qmlRegisterAnonymousType<BellSettings>("org.kde.plasma.access.kcm", 0);
     qmlRegisterAnonymousType<KeyboardSettings>("org.kde.plasma.access.kcm", 0);
     qmlRegisterAnonymousType<KeyboardFiltersSettings>("org.kde.plasma.access.kcm", 0);
+    qmlRegisterAnonymousType<ActivationGesturesSettings>("org.kde.plasma.access.kcm", 0);
     qmlRegisterAnonymousType<ScreenReaderSettings>("org.kde.plasma.access.kcm", 0);
     qmlRegisterAnonymousType<ShakeCursorSettings>("org.kde.plasma.access.kcm", 0);
 
@@ -155,6 +157,7 @@ KAccessConfig::KAccessConfig(QObject *parent, const KPluginMetaData &metaData)
 
     connect(m_data->bellSettings(), &BellSettings::configChanged, this, &KAccessConfig::bellIsDefaultsChanged);
     connect(m_data->mouseSettings(), &MouseSettings::configChanged, this, &KAccessConfig::mouseIsDefaultsChanged);
+    connect(m_data->activationGesturesSettings(), &MouseSettings::configChanged, this, &KAccessConfig::activationGesturesIsDefaultsChanged);
     connect(m_data->keyboardFiltersSettings(), &ScreenReaderSettings::configChanged, this, &KAccessConfig::keyboardFiltersIsDefaultsChanged);
     connect(m_data->keyboardSettings(), &ScreenReaderSettings::configChanged, this, &KAccessConfig::keyboardModifiersIsDefaultsChanged);
     connect(m_data->screenReaderSettings(), &ScreenReaderSettings::configChanged, this, &KAccessConfig::screenReaderIsDefaultsChanged);
@@ -269,6 +272,11 @@ KeyboardFiltersSettings *KAccessConfig::keyboardFiltersSettings() const
     return m_data->keyboardFiltersSettings();
 }
 
+ActivationGesturesSettings *KAccessConfig::activationGesturesSettings() const
+{
+    return m_data->activationGesturesSettings();
+}
+
 ScreenReaderSettings *KAccessConfig::screenReaderSettings() const
 {
     return m_data->screenReaderSettings();
@@ -297,6 +305,11 @@ bool KAccessConfig::keyboardFiltersIsDefaults() const
 bool KAccessConfig::keyboardModifiersIsDefaults() const
 {
     return keyboardSettings()->isDefaults();
+}
+
+bool KAccessConfig::activationGesturesIsDefaults() const
+{
+    return activationGesturesSettings()->isDefaults();
 }
 
 bool KAccessConfig::screenReaderIsDefaults() const
