kcms/access/kcmaccess.h
@@ -15,6 +15,7 @@ class MouseSettings;
 class BellSettings;
 class KeyboardSettings;
 class KeyboardFiltersSettings;
+class ActivationGesturesSettings;
 class ScreenReaderSettings;
 class AccessibilityData;
 class ShakeCursorSettings;
@@ -26,6 +27,7 @@ class KAccessConfig : public KQuickManagedConfigModule
     Q_PROPERTY(BellSettings *bellSettings READ bellSettings CONSTANT)
     Q_PROPERTY(KeyboardSettings *keyboardSettings READ keyboardSettings CONSTANT)
     Q_PROPERTY(KeyboardFiltersSettings *keyboardFiltersSettings READ keyboardFiltersSettings CONSTANT)
+    Q_PROPERTY(ActivationGesturesSettings *activationGesturesSettings READ activationGesturesSettings CONSTANT)
     Q_PROPERTY(ScreenReaderSettings *screenReaderSettings READ screenReaderSettings CONSTANT)
     Q_PROPERTY(ShakeCursorSettings *shakeCursorSettings READ shakeCursorSettings CONSTANT)
     Q_PROPERTY(QString orcaLaunchFeedback READ orcaLaunchFeedback WRITE setOrcaLaunchFeedback NOTIFY orcaLaunchFeedbackChanged)
@@ -35,6 +37,7 @@ class KAccessConfig : public KQuickManagedConfigModule
     Q_PROPERTY(bool mouseIsDefaults READ mouseIsDefaults NOTIFY mouseIsDefaultsChanged)
     Q_PROPERTY(bool keyboardFiltersIsDefaults READ keyboardFiltersIsDefaults NOTIFY keyboardFiltersIsDefaultsChanged)
     Q_PROPERTY(bool keyboardModifiersIsDefaults READ keyboardModifiersIsDefaults NOTIFY keyboardModifiersIsDefaultsChanged)
+    Q_PROPERTY(bool activationGesturesIsDefaults READ activationGesturesIsDefaults NOTIFY activationGesturesIsDefaultsChanged)
     Q_PROPERTY(bool screenReaderIsDefaults READ screenReaderIsDefaults NOTIFY screenReaderIsDefaultsChanged)
     Q_PROPERTY(bool shakeCursorIsDefaults READ shakeCursorIsDefaults NOTIFY shakeCursorIsDefaultsChanged)
 
@@ -54,6 +57,7 @@ public:
     BellSettings *bellSettings() const;
     KeyboardSettings *keyboardSettings() const;
     KeyboardFiltersSettings *keyboardFiltersSettings() const;
+    ActivationGesturesSettings *activationGesturesSettings() const;
     ScreenReaderSettings *screenReaderSettings() const;
     ShakeCursorSettings *shakeCursorSettings() const;
 
@@ -61,6 +65,7 @@ public:
     bool mouseIsDefaults() const;
     bool keyboardFiltersIsDefaults() const;
     bool keyboardModifiersIsDefaults() const;
+    bool activationGesturesIsDefaults() const;
     bool screenReaderIsDefaults() const;
     bool shakeCursorIsDefaults() const;
 
@@ -70,6 +75,7 @@ Q_SIGNALS:
     void mouseIsDefaultsChanged();
     void keyboardFiltersIsDefaultsChanged();
     void keyboardModifiersIsDefaultsChanged();
+    void activationGesturesIsDefaultsChanged();
     void screenReaderIsDefaultsChanged();
     void shakeCursorIsDefaultsChanged();
 
